[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trksnapshot"
version = "0.1.3"
dependencies = [
  "matplotlib>=3.7.0",
  "dipy==1.9.0",
  "fury>=0.10.0",
  "opencv-python>4.9.0.80",
  "nilearn==0.11.1",
  "numpy==1.26.4"
]
requires-python = ">= 3.10"
authors = [
  {name = "Yixue Wendy Feng", email = "yixuewendy.f@gmail.com"},
]
description = "Tractometry Visualization Tool"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["tractometry", "tractography", "diffusion MRI", "white matter"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.10',
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
trksnapshot = "trksnapshot.main:main"

[project.urls]
Homepage = "https://github.com/wendyfyx/trksnapshot"
Issues = "https://github.com/wendyfyx/trksnapshot/issues"